<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.55"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/businessType"/>
            <EditText
                android:id="@+id/et_pBusinessType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="SpayPromotion"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merchantNum"/>
            <EditText
                android:id="@+id/et_pMerchantNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderId"/>
            <EditText
                android:id="@+id/et_pOrderId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"/>
            <EditText
                android:id="@+id/et_pAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currency"/>
            <EditText
                android:id="@+id/et_pCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="CNY"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNum"/>
            <EditText
                android:id="@+id/et_pPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memberId"/>
            <EditText
                android:id="@+id/et_pMerchantId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/environmentParam"/>
            <EditText
                android:id="@+id/et_pEnviromentParam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="必填项(00代表生产，01代表测试)"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign"/>
            <EditText
                android:id="@+id/et_pHmac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_prefentialSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="生成签名"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/btn_getPrefential"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferential"
                android:layout_marginLeft="50dp"/>
            <Button
                android:id="@+id/btn_prefentialBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="vertical">
            <TextView
                android:id="@+id/tv_prefentialResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="展现优惠结果"/>
            </ScrollView>
    </LinearLayout>

</LinearLayout>
